# co2-sensor

./: pyproject.toml
src/: main.py
